--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": { "@/*": ["./src/*"] },
-    "types": ["vitest/globals", "node"]
+    "types": ["vitest/globals", "node"],
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   }
 }
