--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.1.0",
     "@prisma/client": "6.19.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
+    "ioredis": "^5.9.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.3.6",
